--- a/assets/styles/style.styl
+++ b/assets/styles/style.styl
@@ -1,2 +1,18 @@
-h1
-  color blue
+.svg
+  width 260px
+  height 177px
+  float left
+  background white center
+  padding 45px 41px 37px 30px
+.navbar
+  background grey
+  height 77px
+  padding 0
+  border 0
+  border-radius 0
+  margin 0
+  h3
+    padding-right 126px
+.logotipo
+  padding-left 114px
+  top 0
