--- a/assets/styles/style.styl
+++ b/assets/styles/style.styl
@@ -1,18 +1,120 @@
-.svg
-  width 260px
-  height 177px
-  float left
-  background white center
-  padding 45px 41px 37px 30px
 .navbar
-  background grey
-  height 77px
+  background-color grey
   padding 0
-  border 0
-  border-radius 0
-  margin 0
-  h3
-    padding-right 126px
-.logotipo
-  padding-left 114px
-  top 0
+  border 0!important
+  .navbar-brand
+    position absolute
+    background-color white
+    top 0
+    padding 10px 15px !important
+    height auto !important
+    margin 0 !important
+#home
+  height 60vh
+  background-color black
+  background-image url('/images/Group 7.png')
+  background-repeat no-repeat
+  background-size cover
+  background-position top center
+  .principal
+    color white
+    text-align center
+    padding-top 30vh
+    .btn-1
+      border-color rgba(255,255,255,0.2)
+      border-radius 33px
+      background-color none
+      color #1e1e1e
+      text-decoration none
+#ban-edu
+  height 60vh
+  background-color black
+  background-image url('/images/Educacion_Banner.png')
+  background-repeat no-repeat
+  background-size cover
+  background-position top center
+  .principal
+    color white
+    text-align center
+    padding-top 30vh
+    .btn-1
+      border-color rgba(255,255,255,0.2)
+      border-radius 33px
+      background-color none
+      color #1e1e1e
+      text-decoration none
+#ban-admin
+  height 60vh
+  background-color black
+  background-image url('/images/Administracion_Banner.png')
+  background-repeat no-repeat
+  background-size cover
+  background-position top center
+  .principal
+    color white
+    text-align center
+    padding-top 30vh
+    .btn-1
+      border-color rgba(255,255,255,0.2)
+      border-radius 33px
+      background-color none
+      color #1e1e1e
+      text-decoration none
+#ban-merca
+  height 60vh
+  background-color black
+  background-image url('/images/Mercadotecnia_Banner.png')
+  background-repeat no-repeat
+  background-size cover
+  background-position top center
+  .principal
+    color white
+    text-align center
+    padding-top 30vh
+    .btn-1
+      border-color rgba(255,255,255,0.2)
+      border-radius 33px
+      background-color none
+      color #1e1e1e
+      text-decoration none
+#ban-dere
+  height 60vh
+  background-color black
+  background-image url('/images/Derecho_Penal_Banner.png')
+  background-repeat no-repeat
+  background-size cover
+  background-position top center
+  .principal
+    color white
+    text-align center
+    padding-top 30vh
+    .btn-1
+      border-color rgba(255,255,255,0.2)
+      border-radius 33px
+      background-color none
+      color #1e1e1e
+      text-decoration none
+#formulario
+  height 80vh
+  background-image url('/images/Group 6.png')
+  background-repeat no-repeat
+  background-size cover
+  background-position top center
+  .principal
+    color white
+    text-align center
+    padding-top 30vh
+    .btn-1
+      border-color rgba(255,255,255,0.2)
+      border-radius 33px
+      background-color none
+      color #1e1e1e
+      text-decoration none
+#inicio
+  text-align center
+  .cuadro
+    position absolute
+    z-index 2
+    background-color red
+    width 100%
+    height auto
