--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,142 @@
-.svg {
-  width: 260px;
-  height: 177px;
-  float: left;
-  background: #fff center;
-  padding: 45px 41px 37px 30px;
-}
 .navbar {
-  background: #808080;
-  height: 77px;
+  background-color: #808080;
   padding: 0;
-  border: 0;
-  border-radius: 0;
-  margin: 0;
+  border: 0 !important;
 }
-.navbar h3 {
-  padding-right: 126px;
-}
-.logotipo {
-  padding-left: 114px;
+.navbar .navbar-brand {
+  position: absolute;
+  background-color: #fff;
   top: 0;
+  padding: 10px 15px !important;
+  height: auto !important;
+  margin: 0 !important;
+}
+#home {
+  height: 60vh;
+  background-color: #000;
+  background-image: url("/images/Group 7.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top center;
+}
+#home .principal {
+  color: #fff;
+  text-align: center;
+  padding-top: 30vh;
+}
+#home .principal .btn-1 {
+  border-color: rgba(255,255,255,0.2);
+  border-radius: 33px;
+  background-color: none;
+  color: #1e1e1e;
+  text-decoration: none;
+}
+#ban-edu {
+  height: 60vh;
+  background-color: #000;
+  background-image: url("/images/Educacion_Banner.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top center;
+}
+#ban-edu .principal {
+  color: #fff;
+  text-align: center;
+  padding-top: 30vh;
+}
+#ban-edu .principal .btn-1 {
+  border-color: rgba(255,255,255,0.2);
+  border-radius: 33px;
+  background-color: none;
+  color: #1e1e1e;
+  text-decoration: none;
+}
+#ban-admin {
+  height: 60vh;
+  background-color: #000;
+  background-image: url("/images/Administracion_Banner.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top center;
+}
+#ban-admin .principal {
+  color: #fff;
+  text-align: center;
+  padding-top: 30vh;
+}
+#ban-admin .principal .btn-1 {
+  border-color: rgba(255,255,255,0.2);
+  border-radius: 33px;
+  background-color: none;
+  color: #1e1e1e;
+  text-decoration: none;
+}
+#ban-merca {
+  height: 60vh;
+  background-color: #000;
+  background-image: url("/images/Mercadotecnia_Banner.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top center;
+}
+#ban-merca .principal {
+  color: #fff;
+  text-align: center;
+  padding-top: 30vh;
+}
+#ban-merca .principal .btn-1 {
+  border-color: rgba(255,255,255,0.2);
+  border-radius: 33px;
+  background-color: none;
+  color: #1e1e1e;
+  text-decoration: none;
+}
+#ban-dere {
+  height: 60vh;
+  background-color: #000;
+  background-image: url("/images/Derecho_Penal_Banner.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top center;
+}
+#ban-dere .principal {
+  color: #fff;
+  text-align: center;
+  padding-top: 30vh;
+}
+#ban-dere .principal .btn-1 {
+  border-color: rgba(255,255,255,0.2);
+  border-radius: 33px;
+  background-color: none;
+  color: #1e1e1e;
+  text-decoration: none;
+}
+#formulario {
+  height: 80vh;
+  background-image: url("/images/Group 6.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top center;
+}
+#formulario .principal {
+  color: #fff;
+  text-align: center;
+  padding-top: 30vh;
+}
+#formulario .principal .btn-1 {
+  border-color: rgba(255,255,255,0.2);
+  border-radius: 33px;
+  background-color: none;
+  color: #1e1e1e;
+  text-decoration: none;
+}
+#inicio {
+  text-align: center;
+}
+#inicio .cuadro {
+  position: absolute;
+  z-index: 2;
+  background-color: #f00;
+  width: 100%;
+  height: auto;
 }
