--- a/assets/styles/style.styl
+++ b/assets/styles/style.styl
@@ -1,3 +1,16 @@
+$gris = #1e1e1e;
+body
+  h1,h2
+    font-family: 'Univers', sans-serif;
+  p
+    font-family: 'Verdana', sans-serif;
+    font-size 15px
+    color black
+  a
+    font-family: 'Verdana', sans-serif;
+    font-size 15px
+    color $gris
+    font-weight 600
 .navbar
   background-color grey
   padding 0
@@ -9,6 +22,12 @@
     padding 10px 15px !important
     height auto !important
     margin 0 !important
+    &:hover
+      background-color white
+  h3
+    font-size 14px
+    font-weight 300
+    color white
 #home
   height 60vh
   background-color black
@@ -21,11 +40,18 @@
     text-align center
     padding-top 30vh
     .btn-1
-      border-color rgba(255,255,255,0.2)
-      border-radius 33px
-      background-color none
-      color #1e1e1e
+      display block
+      width 250px
+      height 60px
+      line-height 60px
+      margin 0 auto
+      border 1px solid $gris
+      border-radius 10px
+      text-align center
+      text-transform uppercase
       text-decoration none
+      color $gris
+      font-weight 300
 #ban-edu
   height 60vh
   background-color black
@@ -33,16 +59,12 @@
   background-repeat no-repeat
   background-size cover
   background-position top center
-  .principal
-    color white
-    text-align center
-    padding-top 30vh
-    .btn-1
-      border-color rgba(255,255,255,0.2)
-      border-radius 33px
-      background-color none
-      color #1e1e1e
-      text-decoration none
+  h2
+    font-size 38px
+    font-weight 600
+    color #3b3b3b
+    span
+      font-weight 300
 #ban-admin
   height 60vh
   background-color black
@@ -50,16 +72,12 @@
   background-repeat no-repeat
   background-size cover
   background-position top center
-  .principal
-    color white
-    text-align center
-    padding-top 30vh
-    .btn-1
-      border-color rgba(255,255,255,0.2)
-      border-radius 33px
-      background-color none
-      color #1e1e1e
-      text-decoration none
+  h2
+    font-size 38px
+    font-weight 600
+    color #3b3b3b
+    span
+      font-weight 300
 #ban-merca
   height 60vh
   background-color black
@@ -67,16 +85,12 @@
   background-repeat no-repeat
   background-size cover
   background-position top center
-  .principal
-    color white
-    text-align center
-    padding-top 30vh
-    .btn-1
-      border-color rgba(255,255,255,0.2)
-      border-radius 33px
-      background-color none
-      color #1e1e1e
-      text-decoration none
+  h2
+    font-size 38px
+    font-weight 600
+    color #3b3b3b
+    span
+      font-weight 300
 #ban-dere
   height 60vh
   background-color black
@@ -84,37 +98,124 @@
   background-repeat no-repeat
   background-size cover
   background-position top center
-  .principal
-    color white
-    text-align center
-    padding-top 30vh
-    .btn-1
-      border-color rgba(255,255,255,0.2)
-      border-radius 33px
-      background-color none
-      color #1e1e1e
-      text-decoration none
+  h2
+    font-size 38px
+    font-weight 600
+    color #3b3b3b
+    span
+      font-weight 300
+  a
+    font-size 20px
+    font-weight 400
+    color $gris
 #formulario
   height 80vh
   background-image url('/images/Group 6.png')
   background-repeat no-repeat
   background-size cover
   background-position top center
-  .principal
-    color white
-    text-align center
-    padding-top 30vh
-    .btn-1
-      border-color rgba(255,255,255,0.2)
-      border-radius 33px
-      background-color none
-      color #1e1e1e
-      text-decoration none
+  h2
+    font-weight 300
+    font-size 32px
+    color #575657
+    span
+      font-size 67px
+      font-weight 600
+      color #ffc017
 #inicio
   text-align center
-  .cuadro
-    position absolute
-    z-index 2
-    background-color red
+  h2
+    font-size 46px
+    color black
+    font-weight 600
+  p
+    font-size 24px
+    font-weight 300
+    span
+      font-weight 600
+
+/*formulario*/
+.contact-elements
+  position relative
+  width 100%
+  max-width 100%
+  display block
+  input
+    border 1px solid #ccc
+    color #555
+    font-size 1em
     width 100%
-    height auto
+  textarea
+    border 1px solid #ccc
+    padding 6px 10px
+    width 100%
+    color #555
+    resize none
+    overflow auto
+  small
+    color #4f6fad
+    margin 0 0 0 0.5em
+  p
+    color black
+
+
+
+input.input-field, .tel-number-field, .textarea-field, .select-field
+    -webkit-transition all 0.30s ease-in-out
+    -moz-transition all 0.30s ease-in-out
+    -ms-transition all 0.30s ease-in-out
+    -o-transition all 0.30s ease-in-out
+    box-sizing border-box
+    -webkit-box-sizing border-box
+    -moz-box-sizing border-box
+    border 1px solid #C2C2C2
+    box-shadow 1px 1px 4px #EBEBEB
+    -moz-box-shadow 1px 1px 4px #EBEBEB
+    -webkit-box-shadow 1px 1px 4px #EBEBEB
+    border-radius 3px
+    -webkit-border-radius 3px
+    -moz-border-radius 3px
+    padding 7px
+    outline none
+
+.input-field:focus, .tel-number-field:focus, .textarea-field:focus, .select-field:focus
+  border 1px solid #0C0
+
+div.contact, textarea, input
+  -moz-box-sizing border-box
+  -webkit-box-sizing border-box
+  box-sizing border-box
+
+.contact
+  color #fff
+  font-family 'Open Sans', sans-serif
+  font-weight 600
+  line-height 20px
+  h2
+    font-size 50px
+
+.headline
+  font-size 50px
+
+.center-btn
+  text-align center
+
+.container-1
+  padding-bottom 46px
+  background-color #fff
+  border 1px solid #cfcfcf
+  border-bottom 3px solid #ccc
+  border-radius 5px
+
+
+.btn
+  font-size 1.0625em
+  display block
+  color #fff!important
+  border-radius 9px
+  width 280px!important
+  height 40px
+  background-color #515152
+  &:hover
+    background-color #bfbfbf
+
