--- a/assets/styles/style.styl
+++ b/assets/styles/style.styl
@@ -1,4 +1,7 @@
-$gris = #1e1e1e;
+$gris = #1e1e1e
+@font-face
+  font-family "Univers"
+  src url("/fonts/Univers/Univers.otf")
 body
   h1,h2
     font-family: 'Univers', sans-serif;
@@ -109,7 +112,7 @@ body
     font-weight 400
     color $gris
 #formulario
-  height 80vh
+  min-height 80vh
   background-image url('/images/Group 6.png')
   background-repeat no-repeat
   background-size cover
@@ -181,7 +184,7 @@ input.input-field, .tel-number-field, .textarea-field, .select-field
 .input-field:focus, .tel-number-field:focus, .textarea-field:focus, .select-field:focus
   border 1px solid #0C0
 
-div.contact, textarea, input
+div.contact, textarea, input, select
   -moz-box-sizing border-box
   -webkit-box-sizing border-box
   box-sizing border-box
@@ -218,4 +221,21 @@ div.contact, textarea, input
   background-color #515152
   &:hover
     background-color #bfbfbf
+select
+  width 100%!important
+  height 30px
+  color #555
+footer
+  background-color #555 !important
+  height 100px
+  p
+    margin 0 !important
+    color white
+    font-size 11px
+    font-weight 300
+.success
+  color black
+
+
+
 
